##Text encoding: utf-8

2011-07-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/sizedlg.cc: redesigned dialog boxes.
	* programs/crystal/view-settings.cc: ditto.
	* ui/crystal/prefs.ui: ditto.
	* ui/crystal/size.ui: ditto.
	* ui/crystal/view-settings.ui: ditto.

2011-07-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/gcuperiodic.c: make sure that wanted colors are always used.
	* ui/libgcu/gcuperiodic.ui: minor fixes.

2011-07-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/docprop.cc: cleaned out deprecated gtk code.
	* libs/gcp/newfiledlg.cc: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* libs/gcugtk/spectrumdoc.cc: use GtkGrid.
	* libs/gcugtk/spectrumview.cc: ditto.
	* libs/gcugtk/ui-builder.cc: removed GetCombo().
	* libs/gcugtk/ui-builder.h: ditto.
	* plugins/paint/selection/bracketstool.cc: ditto.
	* programs/crystal/window.cc: use GtkGrid.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: use a GtkComboText.
	* ui/paint/arrow-object.ui: ditto.

2011-07-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/chem3ddoc.cc: use the file name as title if the molecule has
	no known name.
	* programs/3d/window.cc: use GtkGrid.

2011-07-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/window.cc: use GtkGrid.
	* libs/gcugtk/filechooser.cc: ditto.
	* ui/libgcu/image-resolution.ui: added missing label.

2011-07-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fontsel.cc: replace more boxes and tables.
	* libs/gcp/tools.cc: fixed toolbars margins.
	* plugins/paint/text/fontsel.ui: minor tweaks.
	* ui/paint/tools.ui: fixed margins.

2011-06-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/preferences.cc: replace boxes and tables.
	* libs/gcp/preferences.h: ditto.
	* ui/paint/preferences.ui: ditto.

2011-06-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/residues/residues.ui: cleaning in plugins completed.