@@ -237,13 +237,13 @@ bool Atom::SetProperty (unsigned property, char const *value)
 	case GCU_PROP_Z:
 		break;
 	case GCU_PROP_XFRACT:
-		m_x = g_ascii_strtod (value, NULL) * GetDocument ()->GetScale ();
+		m_x = g_ascii_strtod (value, NULL);
 		break;
 	case GCU_PROP_YFRACT:
-		m_y = g_ascii_strtod (value, NULL) * GetDocument ()->GetScale ();
+		m_y = g_ascii_strtod (value, NULL);
 		break;
 	case GCU_PROP_ZFRACT:
-		m_z = g_ascii_strtod (value, NULL) * GetDocument ()->GetScale ();
+		m_z = g_ascii_strtod (value, NULL);
 		break;
 	default:
 		return gcu::Atom::SetProperty (property, value);
